# GUI

./: .gitignore  CMakeLists.txt  JSON.md  json.md  s.py  s.sh  sig.md  test.cpp  test.lua  ui.md  warning.md
src/: args.cpp  args.h  config.h  main.cpp
src/Base/: Layout.cpp  Line.cpp  Line.h  label_photo.cpp  label_photo.h  label_role.cpp  label_role.h  mainwindow.cpp  widget_base.cpp  widget_base.h  widget_blank.cpp
src/Builder/: builder.cpp  builder.h
src/Chat/: chat.h  chatid.cpp  chatid.h  friend.cpp  friend.h  group.cpp  group.h
src/Config/: config.h  config_define.h  config_enum.h  config_struct.h  config_ui.h
src/Core/: app_event.h  core.cpp  core.h  core_fd.h  core_gp.h  core_recore.h  core_self.h
src/LeftPage/: widget_left.cpp  widget_left.h
src/ListBar/: widget_list_friend.cpp  widget_list_friend.h
src/ListInfoItem/: config_info_ui.h  widget_info_friend.cpp  widget_info_friend.h  widget_info_group.cpp  widget_info_group.h  widget_info_group_member.cpp  widget_info_group_member.h  widget_info_person.cpp  widget_info_person.h
src/Main/: main_wid.cpp  main_wid.h  widget.cpp  widget.h
src/MainPage/: widget_main.cpp  widget_main.h
src/Message/: label_msg.cpp  label_msg.h
src/Model/Base/: label_photo.cpp  label_photo.h  label_role.cpp  label_role.h  mainwindow.h  wid_base.h  widget_base.cpp  widget_base.h  widget_blank.h
src/Model/Card/: card.cpp  card.h  fd_card.cpp  fd_card.h
src/Model/ChatBar/: chat_btm.cpp  chat_btm.h  chat_default.h  chat_mid.cpp  chat_mid.h  chat_page.cpp  chat_page.h  chat_top.cpp  chat_top.h
src/Model/Group/: member.cpp  member.h
src/Model/ListBar/: core_list.cpp  core_list.h  core_list_item.cpp  core_list_item.h  fd_list.cpp  fd_list.h  fd_list_item.cpp  fd_list_item.h  gp_list.cpp  gp_list.h  gp_list_item.cpp  gp_list_item.h  list_page.cpp  list_page.h
src/Model/Search/: find_page.cpp  find_page.h
src/Model/TitleBar/: title_bar.cpp  title_bar.h  title_btn.h
src/Model/ToolBar/: tool_btn.h  tool_page.cpp  tool_page.h
src/Net/: net_core.cpp  net_core.h
src/RightPage/: widget_right.cpp  widget_right.h
src/RightPage/WidgetType/: widget_default.cpp  widget_default.h  widget_search.cpp  widget_search.h
src/Search/: dialog_group.cpp  dialog_group.h  dialog_person.cpp  dialog_person.h  dialog_search.cpp  dialog_search.h  widget_search_left.cpp  widget_search_left.h  widget_search_right.cpp  widget_search_right.h
src/Search/WidgetSearchType/: widget_search_group.cpp  widget_search_group.h  widget_search_person.cpp  widget_search_person.h
src/Service/: base_service.h  const_json.h  protocol.cpp  protocol.h
src/Service/Net/: net_core.cpp  net_core.h
src/TalkBar/: widget_talk_mid.cpp  widget_talk_mid.h  widget_talk_top.cpp  widget_talk_top.h  widget_talk_window.cpp  widget_talk_window.h
src/TalkBar/Buttom/: widget_talk_bottom.cpp  widget_talk_bottom.h
src/TalkBar/Mid/: widget_talk_mid.cpp  widget_talk_mid.h
src/TalkBar/Top/: widget_talk_top.cpp  widget_talk_top.h
src/TalkBar/bubble/: label_msg.cpp  label_msg.h  widget_msg.cpp  widget_msg.h
src/TitleBar/: titlebar.cpp  titlebar.h
src/Tool/: btn_tool.cpp  btn_tool.h  my_tool.h  widget_tool.cpp  widget_tool.h
src/ToolBar/: btn_tool.cpp  btn_tool.h  widget_tool.cpp  widget_tool.h
src/normal/: widget.cpp  widget.h
src/utils/: tool.h
src/widget/form/: rmchatdialog.cpp  rmchatdialog.h
